# fastapi-webapp

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  init.sh
azure/: create_web_app.sh
azure/containerapp/: create_container_app.sh
azure/webapp/: create_web_app.sh  startup_file.sh
src/: main.py
