[tool.poetry]
name = "fastapi-webapp"
version = "0.0.1"
description = "Try fastapi deployment on Azure Web Apps"
authors = ["SzymonJakubiak <szymonjakubiak@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
